--- a/src/camus/gui/gui.fxml
+++ b/src/camus/gui/gui.fxml
@@ -161,7 +161,7 @@
                   <Separator prefHeight="14.0" prefWidth="195.0" BorderPane.alignment="CENTER" />
                </top>
                <right>
-                  <Button fx:id="aboutButton" mnemonicParsing="false" onAction="#onAbout" text="About" BorderPane.alignment="CENTER" />
+                  <Button fx:id="aboutButton" mnemonicParsing="false" onAction="#onAbout" text="One step" BorderPane.alignment="CENTER" />
                </right>
                <padding>
                   <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
